@@ -250,6 +250,22 @@ name|tools
 operator|.
 name|generic
 operator|.
+name|DisplayTool
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|velocity
+operator|.
+name|tools
+operator|.
+name|generic
+operator|.
 name|EscapeTool
 import|;
 end_import
@@ -535,6 +551,17 @@ literal|"sort"
 argument_list|,
 operator|new
 name|SortTool
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|context
+operator|.
+name|put
+argument_list|(
+literal|"display"
+argument_list|,
+operator|new
+name|DisplayTool
 argument_list|()
 argument_list|)
 expr_stmt|;
